add new rails api skeleton

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 
 # ignore the annoying mac finder metadata file
 .DS_Store
+# Ignore master key for decrypting credentials and more.
+/config/master.key
