--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     image: skeds:local
     build:
       context: .
+      args:
+        RAILS_ENV: development
     volumes:
       - ./:/rails_app
       - gem_cache:/usr/local/bundle
