redis service runs on localhost
ignore the docs

--- a/.github/workflows/run_tests_CI.yml
+++ b/.github/workflows/run_tests_CI.yml
@@ -47,4 +47,4 @@ jobs:
         run: bundle exec rspec
         env:
           RAILS_ENV: test
-          REDIS_URL: 'redis://redis:6379/0'
+          REDIS_URL: 'redis://localhost:6379/0'
