--- a/config/database.yml
+++ b/config/database.yml
@@ -1,15 +1,15 @@
 default: &default
   adapter: postgresql
   pool: <%= ENV.fetch('RAILS_MAX_THREADS', 5) %>
-  url: <%= ENV.fetch('DATABASE_URL', 'postgresql://sdeks:sdeks@localhost') %>
+  url: <%= ENV.fetch('DATABASE_URL', 'postgresql://kade:kade@localhost') %>
 
 development:
   <<: *default
-  database: sdeks_development
+  database: kade_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: sdeks_test
+  database: kade_test
