--- a/.github/workflows/run_tests_CI.yml
+++ b/.github/workflows/run_tests_CI.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           ruby-version: 3.1
           bundler-cache: true
+          cache-version: 1
       - name: Setup DB and configs
         run: |
           RAILS_ENV=test bundle exec rake db:setup
