ensure we setup the db

--- a/.github/workflows/run_tests_CI.yml
+++ b/.github/workflows/run_tests_CI.yml
@@ -41,7 +41,7 @@ jobs:
           ruby-version: 3.1
           bundler-cache: true
       - name: Setup DB and configs
-        run: bin/rails db:create
+        run: bundle exec bin/rails db:setup
       - name: Run tests
         run: bundle exec bin/rspec
 
