cleanup ci test configs (#3)
* remove pgclient setup

* bust cache

* update ci env and job runs

* ensure we setup the db

--- a/.github/workflows/run_tests_CI.yml
+++ b/.github/workflows/run_tests_CI.yml
@@ -4,6 +4,7 @@ on:
   push: { branches: main }
 env:
   DATABASE_URL: postgresql://kade:kade@localhost/gh_ci_test
+  RAILS_ENV: test
 jobs:
   test:
     name: Run Tests
@@ -39,12 +40,8 @@ jobs:
         with:
           ruby-version: 3.1
           bundler-cache: true
-      - name: Install PG Client
-        run: |
-          sudo apt-get -yqq install libpq-dev
       - name: Setup DB and configs
-        run: |
-          RAILS_ENV=test bundle exec rake db:setup
+        run: bundle exec bin/rails db:setup
       - name: Run tests
-        run: RAILS_ENV=test bundle exec rspec
+        run: bundle exec bin/rspec
 
