--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -1,12 +1,23 @@
 name: Deploy to Staging
 
 on:
-  push:
+  workflow_run:
+    workflows: [Zooni CI]
+    types:
+      - completed
     branches:
       - master
   workflow_dispatch:
 
 jobs:
+  check_ci_ok:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+    steps:
+      - run: |
+          echo 'The triggering CI tests workflow failed'
+          exit 1
+
   build_and_push_image:
     name: Build and Push Image
     uses: zooniverse/ci-cd/.github/workflows/build_and_push_image.yaml@main
