allow rspec error expectation block syntax

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,6 +20,10 @@ Rails/UnknownEnv:
 RSpec/MultipleMemoizedHelpers:
   Enabled: false
 
+Style/BlockDelimiters:
+  Exclude:
+    - '**/*_spec.rb'
+
 AllCops:
   NewCops: enable
   TargetRailsVersion: 7
