turn off test logging in CI

--- a/.github/workflows/run_tests_CI.yml
+++ b/.github/workflows/run_tests_CI.yml
@@ -5,6 +5,7 @@ on:
 env:
   DATABASE_URL: postgresql://kade:kade@localhost/gh_ci_test
   RAILS_ENV: test
+  DISABLE_TEST_LOGGING: test
 jobs:
   test:
     name: Run Tests
