set the CI env var
eager load the code for CI test suite

--- a/.github/workflows/run_tests_CI.yml
+++ b/.github/workflows/run_tests_CI.yml
@@ -6,6 +6,7 @@ env:
   DATABASE_URL: postgresql://kade:kade@localhost/gh_ci_test
   RAILS_ENV: test
   DISABLE_TEST_LOGGING: test
+  CI: true
 jobs:
   test:
     name: Run Tests
