Add prod deploy (#52)
* update for correct app_name

* add prod db

* add statement timeout variable

allow different query use cases to have different db level timeouts

* add production deploy

* use wildcard cert for subdomain ingress

* add prod db migration job

* add new line endings to files

--- a/config/database.yml
+++ b/config/database.yml
@@ -2,6 +2,9 @@ default: &default
   adapter: postgresql
   pool: <%= ENV.fetch('RAILS_MAX_THREADS', 5) %>
   url: <%= ENV.fetch('DATABASE_URL', 'postgresql://kade:kade@localhost') %>
+  variables:
+    # default 30s for the DB query exectution - override this via env vars
+    statement_timeout: <%= ENV.fetch('PG_STATEMENT_TIMEOUT', 30000).to_i %>
 
 development:
   <<: *default
@@ -17,3 +20,7 @@ test:
 staging:
   <<: *default
   database: kade_staging
+
+production:
+  <<: *default
+  database: kade_production
