--- a/caesar/docker-compose.yml
+++ b/caesar/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context:  ./
       dockerfile: Dockerfile
     env_file:
-      - env.list
+      - .env.list
     volumes:
       - ./:/usr/src/app
 
