--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,8 +12,20 @@ staging:
   storage_access_key: <%= ENV['AZURE_STORAGE_ACCESS_KEY'] %>
   container: <%= ENV.fetch('AZURE_STORAGE_CONTAINER', 'training') %>
 
+staging-predictions:
+  service: AzureStorage
+  storage_account_name: <%= ENV['AZURE_STORAGE_ACCOUNT_NAME'] %>
+  storage_access_key: <%= ENV['AZURE_STORAGE_ACCESS_KEY'] %>
+  container: <%= ENV.fetch('AZURE_STORAGE_PREDICTIONS_CONTAINER', 'predictions') %>
+
 production:
   service: AzureStorage
   storage_account_name: <%= ENV['AZURE_STORAGE_ACCOUNT_NAME'] %>
   storage_access_key: <%= ENV['AZURE_STORAGE_ACCESS_KEY'] %>
   container: <%= ENV.fetch('AZURE_STORAGE_CONTAINER', 'training') %>
+
+production-predictions:
+  service: AzureStorage
+  storage_account_name: <%= ENV['AZURE_STORAGE_ACCOUNT_NAME'] %>
+  storage_access_key: <%= ENV['AZURE_STORAGE_ACCESS_KEY'] %>
+  container: <%= ENV.fetch('AZURE_STORAGE_PREDICTIONS_CONTAINER', 'predictions') %>
