switch zoobot schedule to 10am every thursday

--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -2,7 +2,7 @@
 
 # this file can be used to paramterize RetrainZoobotJob for different contexts (workflow and subject sets)
 zoobot_training_job:
-  cron: "1 0 * * 0" # sunday 1 min past midnight https://crontab.guru/#1_0_*_*_0
+  cron: "0 10 * * 4" # 10:00 every Thursday https://crontab.guru/#0_10_*_*_4
   class: 'RetrainZoobotJob'
   queue: 'high'
   args: '1' # the context_id to train on (holds the workflow, active and pool subject set ids)
