add new test cases

--- a/spec/fixtures/contexts.yml
+++ b/spec/fixtures/contexts.yml
@@ -1,4 +1,4 @@
-galaxy_zoo_active_learning_project:
+galaxy_zoo_cosmic_active_learning_project:
   id: 1
   workflow_id: 123
   project_id: 39
@@ -6,4 +6,33 @@ galaxy_zoo_active_learning_project:
   pool_subject_set_id: 66
   module_name: 'galaxy_zoo'
   extractor_name: 'cosmic_dawn'
+
+galaxy_zoo_euclid_active_learning_project:
+  id: 2
+  workflow_id: 133
+  project_id: 40
+  active_subject_set_id: 55
+  pool_subject_set_id: 67
+  module_name: 'galaxy_zoo'
+  extractor_name: 'euclid'
+
+
+third_workflow_context:
+  id: 3
+  workflow_id: 143
+  project_id: 41
+  active_subject_set_id: 70
+  pool_subject_set_id: 80
+  module_name: 'galaxy_zoo'
+  extractor_name: 'third_workflow'
+
+fourth_workflow_context:
+  id: 4
+  workflow_id: 153
+  project_id: 42
+  active_subject_set_id: 80
+  pool_subject_set_id: 70
+  module_name: 'galaxy_zoo'
+  extractor_name: 'fourth_workflow'
+
 
