--- a/spec/fixtures/contexts.yml
+++ b/spec/fixtures/contexts.yml
@@ -1,4 +1,4 @@
-galaxy_zoo_active_learning_project:
+galaxy_zoo_cosmic_active_learning_project:
   id: 1
   workflow_id: 123
   project_id: 39
@@ -7,3 +7,11 @@ galaxy_zoo_active_learning_project:
   module_name: 'galaxy_zoo'
   extractor_name: 'cosmic_dawn'
 
+galaxy_zoo_euclid_active_learning_project:
+  id: 2
+  workflow_id: 133
+  project_id: 40
+  active_subject_set_id: 55
+  pool_subject_set_id: 67
+  module_name: 'galaxy_zoo'
+  extractor_name: 'euclid'
